Resolves: tdf#124809 spacing ignored unless WB_ITEMBORDER is set

Change-Id: I29d63926c605d3f143c242337e31388123f22cff
Reviewed-on: https://gerrit.libreoffice.org/70939
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>